# dingens

./: .gitignore  README.md  pyproject.toml
app/: config.py  main.py  models.py
app/backends/: base.py  dreamstudio.py  mock.py
app/templates/: index.html.j2
src/dingens/: config.py  main.py
src/dingens/backends/: base.py  dreamstudio.py  mock.py
